# poetry-core

./: .gitignore
poetry/core/masonry/builders/: builder.py
tests/masonry/builders/: test_sdist.py
tests/masonry/builders/fixtures/project_with_lots_of_ignored_files/: pyproject.toml
tests/masonry/builders/fixtures/project_with_lots_of_ignored_files/project_with_lots_of_ignored_files/js/: package-lock.json  package.json
